--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,12 @@
 <div class="task">
-  <h1> {{task.text}} </h1>
-  <p> {{task.day}} </p>
+  <h1> 
+    {{task.text}} 
+    <fa-icon 
+      [icon]="faTimes"
+      [ngStyle] = "{'color': 'red'}"
+    ></fa-icon>
+  </h1>
+  <p> 
+    {{task.day}}
+  </p>
 </div>
