error en base de datos, no baja ítems y genera una db de error

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -4,6 +4,8 @@
     <fa-icon 
       [icon]="faTimes"
       [ngStyle] = "{'color': 'red'}"
+      (click)="onDelete(task)"
+    
     ></fa-icon>
   </h1>
   <p> 
