--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,8 @@
-<app-add-task>
+<app-add-task
   (onAddTask)="addTask($event)"
+>
 </app-add-task>
+
 <app-task-item
   *ngFor="let task of tasks"
   [task]="task"
